--- a/pokemon_list/index.html
+++ b/pokemon_list/index.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
     />
   </head>
-  <body>
+  <body background="pokemon.jpeg">
     <div class="container">
       <div id="form-container"></div>
 
