--- a/pokemon_list/index.html
+++ b/pokemon_list/index.html
@@ -13,11 +13,11 @@
       <div id="form-container"></div>
 
       <section class="section">
-        <div id="details-container" class="container"></div>
+        <div id="pokemon-container" class="container"></div>
       </section>
     </div>
 
-    <script src="src/details.js"></script>
+    <script src="src/pokemon.js"></script>
     <script src="src/pokemonService.js"></script>
     <script src="src/index.js"></script>
     <!--index is at the bottom so that other ones are loaded first so index can load smoothly while making calls -->
