--- a/pokemon_list/index.html
+++ b/pokemon_list/index.html
@@ -17,9 +17,22 @@
       </section>
     </div>
 
+    <form id="user-comments-form">
+      <input id="user-comments-input"  type="text">
+      <input id="user-comments-submit"  type="submit">
+    </form>
+    
+    <p>Submitted comments will appear here inside this div below:</p>
+    
+    <div id="user-comments-div"> </div>
+
     <script src="src/pokemon.js"></script>
     <script src="src/pokemonService.js"></script>
     <script src="src/index.js"></script>
     <!--index is at the bottom so that other ones are loaded first so index can load smoothly while making calls -->
   </body>
 </html>
+
+
+
+
